plugins {
	id "org.springframework.boot" version "3.4.5"
	id 'io.spring.dependency-management' version '1.1.7'
	id 'java'
	id "io.freefair.lombok" version "8.13.1"
	id 'jacoco'
	id 'checkstyle'
}

apply plugin: 'java'
apply plugin: 'application'
apply plugin: 'checkstyle'
apply plugin: 'org.springframework.boot'

group = 'uk.nhs.digital.nhsconnect.nhais'
sourceCompatibility = '21'

mainClassName = 'uk.nhs.digital.nhsconnect.nhais.IntegrationAdaptorNhaisApplication'

repositories {
	mavenCentral()
}

sourceSets {
    intTest {
		compileClasspath += sourceSets.main.output
		runtimeClasspath += sourceSets.main.output
    }

	recepResponder {
		compileClasspath += sourceSets.main.output
		runtimeClasspath += sourceSets.main.output
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
	intTestImplementation.extendsFrom implementation
	intTestImplementation.extendsFrom testImplementation
	intTestRuntimeOnly.extendsFrom runtimeOnly

	recepResponderImplementation.extendsFrom implementation
	recepResponderImplementation.extendsFrom testImplementation
	recepResponderRuntimeOnly.extendsFrom runtimeOnly
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework:spring-jms'
	implementation 'org.apache.httpcomponents:httpclient:4.5.12'
	implementation 'com.heroku.sdk:env-keystore:1.1.11'

	implementation 'ca.uhn.hapi.fhir:hapi-fhir-base:8.0.0'
	implementation 'ca.uhn.hapi.fhir:hapi-fhir-structures-r4:8.0.0'
	implementation 'ca.uhn.hapi.fhir:hapi-fhir-validation-resources-r4:8.0.0'
	implementation 'com.google.guava:guava:33.4.8-jre'
	implementation 'org.apache.qpid:qpid-jms-client:2.7.0'
	implementation 'com.amazonaws:aws-java-sdk-s3:1.11.880'

	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}

    testImplementation "org.testcontainers:testcontainers:1.21.0"
    testImplementation group: 'org.awaitility', name: 'awaitility', version: '4.3.0'
    testImplementation("org.assertj:assertj-core:3.27.3")
}

test {
	useJUnitPlatform() {
		excludeTags 'component'
	}
}

jacocoTestReport {
    dependsOn test // tests are required to run before generating the report
}

task componentTest(type: Test) {
	useJUnitPlatform() {
		includeTags 'component'
	}
}

task integrationTest(type: Test) {
	useJUnitPlatform() {
		description = 'Runs integration tests.'
		group = 'verification'

		testClassesDirs = sourceSets.intTest.output.classesDirs
		classpath = sourceSets.intTest.runtimeClasspath
		shouldRunAfter test
	}
}

check.dependsOn componentTest
check.dependsOn integrationTest
